update email work

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -4,8 +4,17 @@ user.form.firstname=First name
 user.form.lastname=Last name
 user.form.email=Email
 
+user.existUsername=This login is not available
+user.existEmail=This email is not available
+
 common.signup=Sign up
+common.register=Registration
 common.cancel=Cancel
+common.logout=Logout
+common.search=Search for...
+common.searchButton=Search
 
 reg.confirm=Registration Confirmation
 reg.go.url=Please, to confirm your account go to 
+
+login.not-enabled=Please, activate your account
