--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -16,5 +16,6 @@ common.searchButton=Search
 
 reg.confirm=Registration Confirmation
 reg.go.url=Please, to confirm your account go to 
+reg.resend.message=Resend message
 
 login.not-enabled=Please, activate your account
