--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -17,5 +17,8 @@ common.searchButton=Search
 reg.confirm=Registration Confirmation
 reg.go.url=Please, to confirm your account go to 
 reg.resend.message=Resend message
+log.repare.password=Repare password
+log.wrong=Password or login wrong
+comment.send=Send
 
 login.not-enabled=Please, activate your account
