--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -13,6 +13,9 @@ common.cancel=Cancel
 common.logout=Logout
 common.search=Search for...
 common.searchButton=Search
+common.login=SignIn
+common.please.login=Please sign in
+common.feed=Feed
 
 reg.confirm=Registration Confirmation
 reg.go.url=Please, to confirm your account go to 
@@ -22,3 +25,25 @@ log.wrong=Password or login wrong
 comment.send=Send
 
 login.not-enabled=Please, activate your account
+
+user.reg.valid.username=Login must be english characters lower case of 4 - 10 count
+user.reg.valid.password=Password include lower and upper case english characters, digits. At least 1 upper character, 1 lower character, 1 digit. All count min 8
+user.reg.valid.email=Your existing mailing address
+user.reg.valid.firstname=English or russian characters. First character must be in upper case.Min size - 2
+user.reg.valid.lastname=English or russian characters. First character must be in upper case.Min size - 2
+
+user.info.creator=Information about creator
+user.info.username=Username:
+user.info.firstname=First name:
+user.info.lastname=Last name:
+user.info.email=Email:
+user.info.blogs=User blogs
+user.info.blogname=Blog name:
+user.info.blogdesc=Blog description
+blog.info.pages=Blog pages
+blog.info.pagename=Page name:
+blog.info.blog=Information about blog
+blog.info.blogname=Blog name:
+blog.info.author=Author:
+blog.info.desc=Description:
+blog.info.pagetags=Tags for page:
